--- a/BookingApp_A12_2025_2026/BookingApp_A12_2025_2026.csproj
+++ b/BookingApp_A12_2025_2026/BookingApp_A12_2025_2026.csproj
@@ -32,7 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Data\" />
     <Folder Include="Models\" />
     <Folder Include="wwwroot\css\" />
@@ -46,6 +45,10 @@
     <Folder Include="wwwroot\lib\jquery-validation\dist\" />
     <Folder Include="wwwroot\lib\jquery\" />
     <Folder Include="wwwroot\lib\jquery\dist\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Home\LoginView.cshtml" />
   </ItemGroup>
 
 </Project>
